--- a/styles/mat.module.scss
+++ b/styles/mat.module.scss
@@ -4,17 +4,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     height: 100vh;
     width: 100%;
 	background: $color-primary;
 	$container: &;
 	font-family: var(--font-geist-sans);
+	background: $color-primary;
 
     &Secondary {
 		display: flex;
 		flex-direction: row;
 		width: 100%;
+		height: 100%;
     }
 
     &Main {
@@ -87,6 +89,7 @@
 	background: white;
 	border-radius: 28px;
 	margin-top: 22px;
+	$cta: &;
 
 	&Arrow {
 		display: flex;
@@ -96,6 +99,13 @@
 		height: 24px;
 		width: 24px;
 		background: black;
+		transition: transform 150ms ease-in-out;
+	}
+
+	&:hover {
+		#{$cta}Arrow {
+			transform: rotate(-45deg);
+		}
 	}
 }
 
